// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a default component 1`] = `
<input
  className="form-input"
  disabled={false}
  name={null}
  required={false}
/>
`;

exports[`Input should render as controlled when just a default value and \`onChange()\` is passed into the Input 1`] = `
<input
  class="form-input"
  value="foo"
/>
`;

exports[`Input should render as uncontrolled when just a default value is passed into the Input 1`] = `
<input
  class="form-input"
  value="foo"
/>
`;

exports[`Input should render w/ placeholder text when just a placeholder prop is passed into the Input 1`] = `
<input
  class="form-input"
  placeholder="foo"
/>
`;

exports[`Input should set the forminput to disabled when passed into the component 1`] = `
<input
  class="form-input"
  disabled=""
/>
`;

exports[`Input should set the forminput to invalid when isInvalid is passed into the component 1`] = `
<input
  class="form-input form-error"
/>
`;

exports[`Input should set the forminput to required when required is passed into the component 1`] = `
<input
  aria-required="true"
  class="form-input"
  required=""
/>
`;
